--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-toggle": "^4.1.3",
-    "react-typewriter-effect": "^1.1.0",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
