--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emailjs/browser": "^4.3.3",
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.28",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.427.0",
     "motion": "^12.23.12",
@@ -30,6 +32,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.179.1",
+    "three-globe": "^2.44.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
